# hospital-copilot

./: .gitignore  README.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt
agents/: human_review.py  intake.py  planner.py  qa.py  report.py  retriever.py  supervisor.py
assistants/: chat_assistant.py  therapist_chat.py
chroma_db/: chroma.sqlite3
data/: Autism_Sensory_Integration_Guidelines.txt  Feeding_Swallow_Therapy_Guidelines.txt  Fine_Motor_Skills_Guidelines.txt  Handwriting_Guidelines.txt  School_Readiness_Guidelines.txt  Speech_Language_Therapy_Guidelines.txt
graph/: state.py  workflow.py
tools/: db_tools.py  rag_tools.py
utils/: pdf_generator.py
