[project]
name = "hospital-copilot-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-groq",
    "python-dotenv",
    "psycopg2-binary",
    "chromadb",
    "langchain-community",
    "langchain-text-splitters",
    "sentence-transformers",
    "streamlit",
    "torchvision",
    "reportlab"
]
